--- a/frontend/src/app/modules/contract-engine/configs/contract-config/contract-config.component.css
+++ b/frontend/src/app/modules/contract-engine/configs/contract-config/contract-config.component.css
@@ -85,7 +85,7 @@
 }
 
 .table-container {
-    margin-top: 16px;
+    margin-top: 40px;
     overflow: hidden;
 }
 
