--- a/frontend/src/app/modules/policy-engine/modules-list/modules-list.component.css
+++ b/frontend/src/app/modules/policy-engine/modules-list/modules-list.component.css
@@ -121,7 +121,7 @@
 }
 
 .table-container {
-    margin-top: 16px;
+    margin-top: 40px;
 }
 
 table {
