--- a/frontend/src/app/modules/policy-engine/tools-list/tools-list.component.scss
+++ b/frontend/src/app/modules/policy-engine/tools-list/tools-list.component.scss
@@ -120,7 +120,7 @@
 }
 
 .table-container {
-    margin-top: 16px;
+    margin-top: 40px;
 }
 
 .table-container .mat-column-edit,
