--- a/frontend/src/app/modules/project-comparison/component/projects-overview/projects-overview.component.scss
+++ b/frontend/src/app/modules/project-comparison/component/projects-overview/projects-overview.component.scss
@@ -218,7 +218,7 @@ h1 {
 }
 
 .table-container {
-    margin-top: 16px;
+    margin-top: 40px;
     max-height: calc(120%);
     overflow-y: auto;
 }
