--- a/frontend/src/app/views/admin/logs-view/logs-view.component.scss
+++ b/frontend/src/app/views/admin/logs-view/logs-view.component.scss
@@ -143,7 +143,7 @@
 
 .table-container {
     overflow-x: auto;
-    margin-top: 16px;
+    margin-top: 40px;
 }
 
 table {
