--- a/frontend/src/app/views/branding/branding.component.scss
+++ b/frontend/src/app/views/branding/branding.component.scss
@@ -139,7 +139,7 @@
 }
 
 .table-container {
-    margin-top: 16px;
+    margin-top: 40px;
 }
 
 table {
