--- a/frontend/src/app/views/roles/roles-view.component.scss
+++ b/frontend/src/app/views/roles/roles-view.component.scss
@@ -32,7 +32,7 @@
 }
 
 .table-container {
-    margin-top: 20px;
+    margin-top: 40px;
     overflow-x: auto;
 
     .header-cell-text {
