--- a/frontend/src/app/views/worker-tasks/worker-tasks.component.scss
+++ b/frontend/src/app/views/worker-tasks/worker-tasks.component.scss
@@ -122,7 +122,7 @@
 }
 
 .table-container {
-    margin-top: 16px;
+    margin-top: 40px;
 }
 
 table {
